--- a/style.css
+++ b/style.css
@@ -873,8 +873,8 @@ footer {
     justify-content: center;
   }
 
-  .footer-section {
-    text-align: center;
+  .feature-content p {
+    text-align: left;
   }
 
   .social-links {
